# Picklist

./: .gitignore  docker-compose.yml  docker_build.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
handlers/: base.py  colony_items.py  colony_page.py  colony_settings.py  login.py  logout.py  register.py  require_role.py
routes/: route_map.py
schemas/: colony_schema.sql
src/components/common/button/: help-button.ts  save-button.ts  share-button.ts
src/components/common/dialogs/: appearance-dialog.ts  dialog-component.ts  help-dialog.ts  login-dialog.ts  share-colony-dialog.ts
src/components/common/footer/: footer-component.ts
src/components/common/snackbar/: snackbar.ts
src/components/login/: login-component.ts
src/components/register/: register-component.ts
src/config/: webpack.common.js
src/pages/colony_dashboard/: colony_dashboard.html  colony_dashboard.ts
src/pages/colony_items/: colony_items.html  colony_items.ts
src/pages/colony_settings/: colony_settings.html  colony_settings.ts
src/pages/index/: index.html  index.ts
src/pages/login/: login.html  login.ts
src/pages/register/: register.html  register.ts
src/static/css/: global.css
src/utils/: colors.ts  debounce.ts  theme.ts
utils/: database.py
