[project]
name = "picklist"
version = "0.1.0"
description = "PickList is a family-based ordering system that gives each household a fair share of points based on family size. Families use their points to pick food, supplies, and other items during bulk purchases, ensuring a simple, transparent, and fair distribution for everyone."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "tornado>=6.5.2",
]
